# brickwork_transpiler

./: .gitignore  README.MD  lab_angles.csv  project.toml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
old_tests/: depricated_test_gequiv.py
src/brickwork_transpiler/: QRS_variations.py  __init__.py  bfk_encoder.py  bricks.py  brickwork_transpiler.py  circuits.py  decomposer.py  graph_builder.py  gx_angle_extractor.py  main.py  noise.py  pattern_converter.py  qrs_knn_grover.py  qrs_knn_grover_checked.py  utils.py  visualiser.py
src/brickwork_transpiler/algorithms/: hhl.py  qrs_knn_grover.py
src/brickwork_transpiler/algorithms/experimental_algorithms/: qrs_hamming_threshold.py  qrs_hybrid.py  qrs_knn_grover.py  qrs_knn_grover_adapted.py
src/brickwork_transpiler/experiments/: hhl_transpilation.py  minimaLqrs.py  minimal_qrs_transpilation_simulation.py  plot_qrs_data.py  qft_transpilation.py  qrs_full_transpilation.py  qrs_no_amp_transpilation.py  qrs_no_db_transpilation.py
src/brickwork_transpiler/experiments/data/output_data/: experiment_hhl_bad_b_bad_matrix.csv  experiment_hhl_d2_laplacian.csv  experiment_hhl_dense_unoptimised.csv  experiment_hhl_laplacian_opt0_d_avg.csv  experiment_hhl_log_sq.csv  experiment_hhl_no_ancillae.csv  experiment_hhl_no_eff_b.csv  experiment_hhl_optimised.csv  experiment_hhl_sparse.csv  experiment_hhl_sparse_one_over_m.csv  experiment_hhl_sparse_opt.csv  experiment_hhl_sparse_opt0_d_avg.csv  experiment_hhl_toeplitz_d_avf_opt0.csv  experiment_hhl_toeplize_trotter2_no_opt.csv  experiment_qrs_full_no_matching_element.csv  experiment_qrs_full_one_match_duplicates.csv  experiment_qrs_full_subset_grover.csv  experiment_qrs_no_db_no_matching_element.csv  experiment_qrs_no_db_one_match_duplicates.csv  experiment_qrs_no_db_subset_grover.csv  experiments_hhl.csv  experiments_qft.csv  experiments_qpe.csv  experiments_qrs_full_one_match.csv  experiments_qrs_no_db_one_match.csv  minimal_qrs_experiment_log.txt  minimal_qrs_experiment_pattern.txt
tests/: test_bricks.py  test_system.py  test_utils.py
tests/old/: depricated_test_decomposer.py
tests/system_tests/: test_circuits.py  test_system.py  test_system_single_bricks.py
tests/unit_and_integration_tests/: test_bfk_encoder.py  test_bricks.py  test_decomposer.py  test_graphs.py  test_noise.py  test_ref_layout_synchronisation.py  test_utils.py
